[package]
name = "learnfs"
version = "0.1.0"
authors = ["Max Kuznetsov <syhpoon@syhpoon.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
nix = "0.15.0"
serde = {version = "1.0", features=["derive"]}
bincode = "1.1.4"
fuse = "0.3"
lazy_static = "1.4.0"
