[package]
name = "learnfs"
version = "0.1.0"
authors = ["Max Kuznetsov <syhpoon@syhpoon.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
nix = "0.15.0"
serde = {version = "1.0", features=["derive"]}
serde-big-array = "0.2.0"
bincode = "1.1.4"
fuse = "0.3"
lazy_static = "1.4.0"
tonic = "0.1.0-alpha.5"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = "=0.2.0-alpha.6"

[build-dependencies]
tonic-build = "0.1.0-alpha.5"