[package]
name = "learnfs"
version = "0.1.0"
authors = ["Max Kuznetsov <syhpoon@syhpoon.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
bytes = "0.4"
clap = "2.33.0"
failure = "0.1.5"
fuse = "0.3"
lazy_static = "1.4.0"
libc = "0.2.65"
log = "0.4"
log4rs = "0.8"
nix = "0.15.0"
prost = "0.5"
prost-derive = "0.5"
serde = {version = "1.0", features=["derive"]}
serde-big-array = "0.2.0"
signal-hook = "0.1.11"
tonic = "0.1.0-alpha.5"
tokio = "=0.2.0-alpha.6"
time = "0.1.42"

[build-dependencies]
tonic-build = "0.1.0-alpha.5"